// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render children 1`] = `
<ul
  className="dropdown-menu dropdown-menu--sidemenu"
  role="menu"
>
  <li
    className="side-menu-header"
  >
    <span
      className="sidemenu-item-text"
    >
      link
    </span>
  </li>
  <DropDownChild
    child={
      Object {
        "id": 1,
      }
    }
    key="undefined-0"
  />
  <DropDownChild
    child={
      Object {
        "id": 2,
      }
    }
    key="undefined-1"
  />
  <DropDownChild
    child={
      Object {
        "id": 3,
      }
    }
    key="undefined-2"
  />
</ul>
`;

exports[`Render should render component 1`] = `
<ul
  className="dropdown-menu dropdown-menu--sidemenu"
  role="menu"
>
  <li
    className="side-menu-header"
  >
    <span
      className="sidemenu-item-text"
    >
      link
    </span>
  </li>
</ul>
`;
